--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,8 @@ pyopenssl = "*"
 flask-cors = "*"
 flask-bcrypt = "*"
 flask-jwt-extended = "*"
+gunicorn = "*"
+requests = "*"
 
 [requires]
 python_version = "3.7"
