--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "overstated": "^2.2.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
+    "react-bootstrap-typeahead": "^3.4.5",
     "react-dom": "^16.8.6",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.1",
