--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-bootstrap-typeahead": "^3.4.5",
+    "react-circular-progressbar": "^2.0.1",
     "react-dom": "^16.8.6",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.1",
