Adding Flask-Migrate

--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ flask-bcrypt = "*"
 flask-jwt-extended = "*"
 gunicorn = "*"
 requests = "*"
+flask-migrate = "*"
 
 [requires]
 python_version = "3.7"
