--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
     "node-sass": "^4.12.0",
     "overstated": "^2.2.0",
     "react": "^16.8.6",
