--- a/ui/package.json
+++ b/ui/package.json
@@ -13,7 +13,7 @@
     "node-sass": "^4.12.0",
     "overstated": "^2.2.0",
     "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.9",
+    "react-bootstrap": "^1.0.1",
     "react-bootstrap-typeahead": "^3.4.5",
     "react-circular-progressbar": "^2.0.1",
     "react-dom": "^16.8.6",
