Pinning breaking dependencies

--- a/Pipfile
+++ b/Pipfile
@@ -14,12 +14,12 @@ flask-restful = "*"
 flask-sqlalchemy = "*"
 flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
-psycopg2 = "*"
+psycopg2 = "==2.7.5"
 marshmallow = "*"
 pyopenssl = "*"
 flask-cors = "*"
 flask-bcrypt = "*"
-flask-jwt-extended = "*"
+flask-jwt-extended = "==3.25.1"
 gunicorn = "*"
 requests = "*"
 flask-migrate = "*"
